--- a/app/index.html
+++ b/app/index.html
@@ -22,15 +22,19 @@
             <div class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</div>
         <![endif]-->
 
-
-                    <nav class="col-xs-3 side-nav">
-                        <ul class="nav nav-stacked" id="nav-intro">
-                            <li><a href="#intro-region">Home</a></li>
-                            <li><a href="#about-region">About Me</a></li>
-                            <li><a href="#work-region">Selected Work</a></li>
-                            <li><a href="#contact-region">Get in Touch</a></li>
-                        </ul>
-                    </nav>
+                    <div class="col-xs-3 side-nav">
+                        <div class="nav-header">
+                            <h2>E / W </h2>
+                        </div>
+                        <nav>
+                            <ul class="nav nav-stacked" id="nav-intro">
+                                <li><a href="#intro-region">Home</a></li>
+                                <li><a href="#about-region">About Me</a></li>
+                                <li><a href="#work-region">Selected Work</a></li>
+                                <li><a href="#contact-region">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
 
                     <div class="main-content">
                         <div class="swiper-container">
