--- a/app/index.html
+++ b/app/index.html
@@ -22,18 +22,7 @@
             <div class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</div>
         <![endif]-->
 
-                    <div class="col-xs-3 side-nav">
-                        <div class="nav-header">
-                            <h2>E / W </h2>
-                        </div>
-                        <nav>
-                            <ul class="nav nav-stacked" id="nav-intro">
-                                <li><a href="#intro-region">Home</a></li>
-                                <li><a href="#about-region">About Me</a></li>
-                                <li><a href="#work-region">Selected Work</a></li>
-                                <li><a href="#contact-region">Contact</a></li>
-                            </ul>
-                        </nav>
+                    <div id="nav-region" class="col-xs-3 side-nav">
                     </div>
 
                     <div class="main-content">
@@ -83,7 +72,7 @@
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/templates.js"></script>
-        <script src="scripts/app.js"></script>
+        <script src="scripts/application.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 
